// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup assigns button props to the children 1`] = `
<div
  className="button-group"
>
  <button
    className="button-s button-primary button-border button-pill button-square"
    disabled={true}
    type="button"
  />
  <button
    className="button-s button-primary button-border button-pill button-square"
    disabled={true}
    type="button"
  />
  <button
    className="button-s button-primary button-border button-pill button-square"
    disabled={true}
    type="button"
  />
</div>
`;

exports[`ButtonGroup child props take priority over parent props 1`] = `
<div
  className="button-group"
>
  <button
    className="button-s button-primary"
    disabled={undefined}
    type="button"
  />
  <button
    className="button-l button-secondary"
    disabled={undefined}
    type="button"
  />
  <button
    className="button-s button-primary"
    disabled={undefined}
    type="button"
  />
</div>
`;
